--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </html>
 
 <script>
-  var socket = io.connect("http://76.187.225.128:8080");
+  var socket = io.connect("http://localhost:8080");
 
   socket.on("joinedTable", function(data){
     $('#textbox').val(data.message);
