--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <script>
   var socket = io.connect("http://localhost:8080");
-
+  
   socket.on("joinedTable", function(data){
     $('#textbox').val(data.message);
     var hand = data.hand;
@@ -44,9 +44,16 @@
       $('#cardList').append('<input class="cardInput" type="radio" name="card"" value="'+shortCode+'">' + name + '<br/>');
     }
   });
+  
+  $('#playCardButton').click(function() {
+    var shortCode = $('input.cardInput:checked').val();
+    if (shortCode) {
+      socket.emit("playCard", { card: shortCode })
+    }
+  });
 
   $("#joinButton").click(function(){
-    socket.emit("playerjoin",{playerName:$('#playerName').val()});
+    socket.emit("playerjoin", { playerName:$('#playerName').val() });
   });
 
 </script>
