--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
       </div>
       <div id = "actionArea">
         <button id="playCardButton" disabled="true">Play Card</button>
-        <select id="targetPlayerList"></select>
+        Target: <select id="targetPlayerList"></select>
+        Guess (for Guard):
+        <select id="guessList">
+          <option value="c">Courtier</option>
+          <option value="d">Diplomat</option>
+          <option value="s">Shugenja</option>
+          <option value="h">Hatamoto</option>
+          <option value="m">Manipulator</option>
+          <option value="s">Sensei</option>
+          <option value="p">Princess</option>
+        </select>
       </div>
-      <div id="cardArea">
+      <br/>
+      <div id="cardArea" style="border: 1px black solid">
+        Hand:
         <form id="cardList" action="">
         </form>
       </div>
@@ -39,7 +51,6 @@
     
     // Set up the starting cards
     var hand = data.hand;
-    $('#playCardButton').prop("disabled", false);
     for (var i = 0; i < hand.length; i++) {
       var name = hand[i].name;
       var shortCode = hand[i].shortCode;
@@ -61,6 +72,18 @@
     $('#targetPlayerList').append('<option value="'+newPlayer.id+'">'+newPlayer.name+'</option>');
   });
   
+  socket.on("turnBegan", function(data){
+    // Enable the play card button if you are the active player.
+    if (socket.id == data.activePlayer.id) {
+      $('#playCardButton').prop("disabled", false);
+    } else {
+      $('#playCardButton').prop("disabled", true);
+    }
+    
+    $('#textbox').val($('#textbox').val() + "\nNew turn, active player is " + data.activePlayer.name);
+    $('#textbox').scrollTop($('#textbox')[0].scrollHeight);
+  });
+  
   socket.on("turnEnded", function(data){
     $('.cardSpan').remove();
     var hand = data.hand;
@@ -71,10 +94,15 @@
     }
   });
   
+  socket.on("cardPlayed", function(data){
+    $('#textbox').val($('#textbox').val() + "\n" + data.message);
+    $('#textbox').scrollTop($('#textbox')[0].scrollHeight);
+  });
+  
   $('#playCardButton').click(function() {
     var shortCode = $('input.cardInput:checked').val();
     var targetPlayerId = $('#targetPlayerList').val();
-    if (shortCode) {
+    if (shortCode && targetPlayerId) {
       socket.emit("playCard", { 
         cardCode: shortCode,
         targetPlayerId: targetPlayerId,
