--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   }
 
   .selected {
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.8);
+    box-shadow: 0px 0px 30px rgba(0,0,0,0.3) inset, 0px 0px 20px rgba(82, 168, 236, 0.9);
   }
 </style>
 
@@ -105,11 +105,13 @@
   });
   
   socket.on("turnEnded", function(data){
-    $('.cardSpan').remove();
+    console.log(data.hand);
+    $('#cardArea').empty();
     var hand = data.hand;
     for (var i = 0; i < hand.length; i++) {
       var name = hand[i].name;
       var shortCode = hand[i].shortCode;
+      console.log(shortCode);
       $('#cardArea').append('<div id=card'+i+' class="cardInput col-xs-2" name="card" value="'+shortCode+'">' + name + '</div>');
     }
     addCardClickEvents();
